@@ -82,7 +82,7 @@
                     <pre class="query-result {{ resultHeaderTypes[$index] | columnTypeClass }}">NULL</pre>
                   </div>
                   <div ng-if="column != null && ColumnTypeCheck.requiresNoFormatting(resultHeaderTypes[$index])">
-                    <pre class="query-result {{ resultHeaderTypes[$index] | columnTypeClass }}">{{ column }}</pre>
+                    <pre class="query-result {{ resultHeaderTypes[$index] | columnTypeClass }}">{{ column }}<span  class="unsafe-number" data-original-title="{{ 'CONSOLE.UNSAFE_INTEGER' | translate }}" cr-tooltip cr-tooltip-position="right" ng-if="!ColumnTypeCheck.isSafe(column)"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i></span></pre>
                   </div>
                   <div ng-if="column != null && !ColumnTypeCheck.requiresNoFormatting(resultHeaderTypes[$index])">
                     <pre class="query-result {{ resultHeaderTypes[$index] | columnTypeClass }}" ng-if="ColumnTypeCheck.isGeopoint(resultHeaderTypes[$index])">{{ column }} <a href="https://www.google.com/maps/place/{{column[1]}},{{column[0]}}" target="_blank"><i class="fa fa-external-link"></i></a></pre>
@@ -93,7 +93,7 @@
                   </div>
                 </div>
                 <div ng-if="!formatResults">
-                  <pre class="query-result" ng-if="column != null">{{ column }}</pre>
+                  <pre class="query-result" ng-if="column != null">{{ column }} <span class="unsafe-number" data-original-title="{{ 'CONSOLE.UNSAFE_INTEGER' | translate }}" cr-tooltip cr-tooltip-position="right" ng-if="!ColumnTypeCheck.isSafe(column)"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i></span> </pre>
                   <pre class="query-result" ng-if="column == null">NULL</pre>
                 </div>
               </td>
