@@ -5,6 +5,9 @@ Changes for Crate Admin Interface
 Unreleased
 ==========
 
+ - Added: display warning in the console view when the query result contains 
+   an unsafe integer.
+
  - Fix: Show loading indicator when `Execute Query ` is in progress.
 
 2017/01/11 1.1.0
